# RoboCup-Spielererkennung

code-master/: .gitassumeunchanged  .gitignore  CHANGELOG  CMakeLists.txt  Doxyfile  Makefile  README  VERSION  build  wiki_sourcecode_review.txt  wiki_sourcecode_review.txt.orig
code-master/cmake/: FindPythonLibs.cmake
code-master/doc/: README DynamicKickModule  README DynamicThrowModule  conf.py  hardware.rst  index.rst  index.rst.orig  project.rst  project.rst.orig  public_relations.rst  schnelleinstieg.rst  software.rst
code-master/doc/_themes/stormpath/: layout.html
code-master/doc/hardware/: 3DDrucker.rst  grundlagen.rst  inventor.rst  problems.rst  teile.rst
code-master/doc/hardware/3DDrucker/: grundlagen.rst
code-master/doc/hardware/grundlagen/: Darwin.rst  schrauben.rst
code-master/doc/hardware/inventor/: 3D_druck.rst  assembly.rst  faq.rst  grundlagen.rst  metal_sheet.rst  technische_zeichnungen.rst
code-master/doc/hardware/teile/: battery.rst  cm730.rst  kamera.rst  mainboard.rst  motor.rst  powerboard.rst  wiring.rst
code-master/doc/public_relations/: general.rst  homepage.rst  presentations.rst  singing.rst
code-master/doc/schnelleinstieg/: doku.rst  hardware.rst  projekt.rst  software.rst
code-master/doc/schnelleinstieg/projekt/: chroot.rst  ersteinrichtung.rst  flashen.rst  netzwerk.rst  virtual-env.rst
code-master/doc/schnelleinstieg/software/: behaviour.rst  pstar.rst  ueberblick.dia  ueberblick.rst  vision.rst  walking.rst
code-master/doc/software/: allgemein.rst  bitbots.rst  ext_sw.rst  problems.rst  record.rst  skripte.rst
code-master/doc/software/allgemein/: abhaengigkeiten.rst  codingstandards.rst  git.rst  jenkins.rst  testing.rst
code-master/doc/software/bitbots/: aufbau.rst  ipc.rst  libs.rst  modules.rst  motion.rst  other.rst
code-master/doc/software/ext_sw/: debug-ui.rst  image-tagger.rst  simulator.rst
code-master/infrastruktur/netzwerkstuff/: dnsmasq.conf
code-master/infrastruktur/setup/: aliases.zsh  install.sh
code-master/infrastruktur/streaming/: video.py
code-master/infrastruktur/wlan-config/: BitBots  HL_KID_C
code-master/lib/: CMakeLists.txt  eigen.pxd  lib.doxy
code-master/lib/bitbots/: CMakeLists.txt  bitbots.doxy  glibevent.py
code-master/lib/mitecom/: mitecom.cpp
code-master/lib/nabo/: CMakeLists.txt  README  index_heap.h  kdtree_cpu.cpp  nabo.cpp  nabo.h  nabo_private.h
code-master/overlay/: README
code-master/overlay/atlas/: config.yaml
code-master/overlay/cascade/: config.yaml
code-master/overlay/fiona/: config.yaml  offset.yaml
code-master/overlay/gareth/: config.yaml
code-master/overlay/glados/: config.yaml
code-master/overlay/goal/: config.yaml  offset.yaml
code-master/overlay/kuddel/: config.yaml
code-master/overlay/nimue/: config.yaml
code-master/overlay/oberon/: config.yaml
code-master/overlay/tamara/: config.yaml
code-master/overlay/wheatly/: config.yaml  offset.yaml
code-master/overlay/wilma/: config.yaml  offset.yaml
code-master/playaround/ezsift-src-v1.1/: CMakeLists.txt  README  __init__.py  build.sh  common.h  embedding.py  ezsift.cpp  ezsift.h  ezsift_real_test.py  ezsift_wrapper.py  ezsift_wrapper_test.py  fileimagegrabber.py  hello.cpp  pyexampe.py  pyexampe3.py  videograbber.py
code-master/playaround/footsim/: MotorControlQLearner.py  ObjectGenerator.py  SunGenerator.py  instant.py  main.py  test.py
code-master/playaround/linedetection/: CenterCircleDetection.py  CircularRegressionHelper.py  CustomHoughProcess.py  KNNLineRemoval.py  LineDetectStep.py  data.py  embedding_darwin_-10  embedding_darwin_-11  embedding_darwin_-12  embedding_darwin_-13  embedding_darwin_-14  embedding_darwin_-15  embedding_darwin_-16  embedding_darwin_-17  embedding_darwin_-18  embedding_darwin_-4  embedding_darwin_-5  embedding_darwin_-7  embedding_darwin_-8  embedding_darwin_-9  judithundmaike.py  kNN.py  line_k_means.py  main.py  mhelper.py  pca.py  readRobotLineData.py  sample.py  testingcirclefunction.py  testingcirclefunction2.py  testingcirclefunction3.py
code-master/playaround/particle_filter/: AngleMatching.py  HorizonParticleFilter.py  KMeans.py  LogoMatchingWorldModell.py  MultiRobotParticleFilter.py  PFNearestLine.py  Particle.py  RobotHorizonParticleFilter.py  WeightedDistribution.py  World.py  analysing_matrix.py  field.py  utils.py
code-master/share/bitbots/: boot-defaults.sh  cables.yaml  config.yaml  debug.image.ui  debug.motor.ui  debug.ui  offset.yaml  record_aliases.yaml  record_help.yaml
code-master/share/stuff/: F015 Lgo
code-master/share/tags/: darwin-tags.txt  goal-tags.txt  magdeburg-1-tags.txt  magdeburg-2-tags.txt  magdeburg-3-tags.txt  magdeburg-4-tags.txt  magdeburg-5-tags.txt  magdeburg-6-tags.txt  pose+yuyv-tags.txt
code-master/tests/: CMakeLists.txt  run-coverage  run-cpp-tests.sh  run-python-styletests  run-python-tests  startup-test  testVision  walking_performance_test.py
code-master/tools/: CMakeLists.txt  crop_animations.sh
code-master/tools/behaviour-graph/: MakeGraph.py
code-master/tools/debug-ui/: CMakeLists.txt
code-master/tools/debug-ui-hookable/: CMakeLists.txt
code-master/tools/debug-ui-neu/: CMakeLists.txt
code-master/tools/find-unused-config/: FindUnusedConfig.py
code-master/tools/glrobot/: CMakeLists.txt  color-config.json  goal.blend
code-master/tools/image-tagger/: CMakeLists.txt  Manifest  cumulate_color_masqs.py
code-master/tools/image-tagger-2/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.hpp  main.cpp
code-master/tools/lokalisation_sample/: draw.py  torpfilt.py
code-master/tools/motor-setup/: CMakeLists.txt
code-master/tools/pathfinding_trainer/: evolution.py  network.py  potentialmap.py  settings.py  simulator.py  start.py
code-master/tools/roboinventory/: manage.py
code-master/tools/robot_localisation_faker/: main.py  test.py
code-master/tools/simulation/: virtualmachinehandler.py
code-master/tools/simulation_2d/: Robot.py  SupervisorClient.py  TestWorldService.py  Visualizer.py  WorldService.py  __init__.py  main.py
code-master/tools/yuv2png/: YUV2PNG.java
(+897 files in other folders)
